test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_trying_to_access_public_function_inside_private_module/src/main.nr

    mod foo {
        mod bar {
            pub fn baz() {}
        }
    }
    fn main() {
        foo::bar::baz()
    }
    